# Bankware

./: .gitignore  CMakeLists.txt  README.txt  view.cc
include/: blade.hh  buoy.hh  collectible.hh  collectibles.hh  controller.hh  data.hh  data.hh.orig  effect.hh  enemy.hh  entity.hh  file_utils.hh  game.hh  game_object.hh  gate.hh  hitbox.hh  item.hh  items.hh  particle_system.hh  path_config.h  player.hh  powerup.hh  projectile.hh  satellite.hh  shader.hh  shield.hh  shield_collectible.hh  shotgunner.hh  text_object.hh  view.hh  weapon.hh
resources/: cmake_install.cmake  fragment_shader.glsl
resources/Sprites/: hero.aseprite
resources/shaders/: geom_fragment_shader.glsl  geom_vertex_shader.glsl  particle_fragment_shader.glsl  particle_vertex_shader.glsl  sprite_fragment_shader.glsl  text_fragment_shader.glsl  text_vertex_shader.glsl
src/: main.cc
src/engine/: controller.cc  game.cc  game.cc.orig  shader.cc  view.cc  view.cc.orig
src/entities/: buoy.cc  enemy.cc  entity.cc
src/entities/enemies/: gate.cc  satellite.cc  shotgunner.cc
src/objects/: blade.cc  collectible.cc  effect.cc  game_object.cc  hitbox.cc  particle_system.cc  projectile.cc  shield.cc  shield_collectible.cc  text_object.cc
src/objects/collectibles/: buff_collectible.cc  collectible.cc  dash_collectible.cc  key_collectibles.cc  powerup.cc  shield_collectible.cc  weapon_collectible.cc  weapon_collectibles.cc
src/objects/items/: dash.cc  dashbuff.cc  item.cc  keys.cc  rate_of_fire.cc  shield.cc  speed_up.cc
src/objects/weapons/: weapon.cc
src/util/: file_utils.cc  path_config.h.in
